# xlsx_clean

./: .gitignore  README.md  pyproject.toml
src/xlsx_clean/: __init__.py  clean_cells.py  file_data.csv  new_xslx.bat  strings.txt
