[project]
name = "xlsx-clean"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diaco Soltanpour", email = "dyaco8464@yahoo.com" }
]
dependencies = [
    "beaupy>=3.8.2",
    "pandas>=2.2.2",
    "pywin32>=306",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xlsx_clean"]
